manifests/kubernetes-dashboard/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubedash
spec:
  rules:
    - host: kubedash.loc
      http:
        paths:
          - backend:
              service:
                name: kube-dash-kubernetes-dashboard-web
                port:
                  number: 8000
            path: /
            pathType: Prefix
